--- a/goober/index.html
+++ b/goober/index.html
@@ -6,7 +6,7 @@
     
     <!-- Video Link -->
     <meta property="og:type" content="video.other">
-    <meta property="og:video:url" content="https://raw.githubusercontent.com/FrostyDevLOL/Sus/main/media/y2mate.com - ">
+    <meta property="og:video:url" content="https://raw.githubusercontent.com/FrostyDevLOL/Sus/main/media/y2mate.com - Dududududu_720p.mp4">
     
     <!-- Change video width and height to match gif -->
     <meta property="og:video:height" content="360">
