--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:video:width" content="480">
     
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/@notexttospeech" />
+    <meta http-equiv="refresh" content="0; url=https://youtu.be/UjRikc_ldIQ?si=KHlQp0qw24oZjvxk" />
   </head>
   <body>
   </body>
